Amends to register emails and index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -199,7 +199,43 @@
             </ul>
 
 
+            <h3 class="govuk-heading-s">Confidence level</h3>
 
+            <table class="govuk-table">
+                <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                        <th class="govuk-table__header" scope="col">User journey step</th>
+                        <th class="govuk-table__header" scope="col">Confidence</th>
+                    </tr>
+                </thead>
+
+                <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/dashboard-service-prap">Service admin dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/organisation-list-prap">Organisation list landing</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/organisation-add-prap">Add a new organisation</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/user-add-user-prap-org">Add a new user (as a service admin)</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/mvp1/user-list-prap">View all users for a service</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                    </tr>
+                </tbody>
+            </table>
             
 
             <details class="govuk-details govuk-!-margin-top-9">
