--- a/app/views/v6/l4/users/register/email.html
+++ b/app/views/v6/l4/users/register/email.html
@@ -86,8 +86,7 @@
                         DWP have invited you to use {{ data['prototype-service'] }}.
                     </p>
 
-                    <h2 style="Margin: 0 0 20px 0; padding: 0; font-size: 27px; line-height: 35=
-        px; font-weight: bold; color: #0B0C0C;">
+                    <h2 style="Margin: 0 0 10px 0; padding: 0; font-size: 24px; line-height: 35px; font-weight: bold; color: #0B0C0C;">
                         What you must do next
                     </h2>
 
@@ -99,10 +98,6 @@
                         You have 72 hours from when this email was sent to register.
                     </div>
 
-                    <h2 style="Margin: 0 0 20px 0; padding: 0; font-size: 27px; line-height: 35=
-                    px; font-weight: bold; color: #0B0C0C;">
-                        How to register
-                    </h2>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
                         This link will take you to DWP Authenticate, where you can register:
@@ -120,8 +115,7 @@
                         </a>
                     </p>
 
-                    <h2 style="Margin: 0 0 20px 0; padding: 0; font-size: 27px; line-height: 35=
-                    px; font-weight: bold; color: #0B0C0C;">
+                    <h2 style="Margin: 0 0 10px 0; padding: 0; font-size: 24px; line-height: 35px; font-weight: bold; color: #0B0C0C;">
                         Problems registering
                     </h2>
 
