--- a/app/views/index.html
+++ b/app/views/index.html
@@ -206,34 +206,133 @@
                     <tr class="govuk-table__row">
                         <th class="govuk-table__header" scope="col">User journey step</th>
                         <th class="govuk-table__header" scope="col">Confidence</th>
+                        <th class="govuk-table__header" scope="col">Dev Ready</th>
+                        <th class="govuk-table__header govuk-!-width-one-third" scope="col">Notes</th>
+
                     </tr>
                 </thead>
 
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/mvp1/dashboard-service-prap">Service admin dashboard</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Register email</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/mvp1/organisation-list-prap">Organisation list landing</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Create new password</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/mobile">Mobile 2FA</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/app-check">App or text message question</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Concerns that content is leading, needs review</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/app-check">Authenticator app setup</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">Low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Sign in email</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">Medium</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Design iterated following research, needs validating</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/signin">Sign in</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">High</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Tested well with 10 users</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/mvp1/organisation-add-prap">Add a new organisation</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/register/password">Password reset</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
-                    </tr>
-
-                <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/mvp1/user-add-user-prap-org">Add a new user (as a service admin)</a></td>
-                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell"><a href="/mvp1/user-list-prap">View all users for a service</a></td>
+                        <td class="govuk-table__cell"><a href="/v6/l2/dashboard">Service admin dashboard</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--high">high</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Tested well with all users</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/view/all">Organisation list</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Initially tested well, full user need not yet understood</td>
                     </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/orgs/add/start">Add a new organisation</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Business requirements needed</td>
+                    </tr>
+
+                     <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Organisation details</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Delete organisation</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--low">low</span></td>
+                        <td class="govuk-table__cell"></td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/view/all">User list</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Initially tested well, full user need not yet understoods</td>
+                        
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Add a new user</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">New designs researched, initial design iterated, tested with 8 users</td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">User details</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Users have been able to complete task but multiple ways to do this and not all journeys explored</td>
+                    </tr>
+
+                     <tr class="govuk-table__row">
+                        <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Delete user</a></td>
+                        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
+                        <td class="govuk-table__cell">Yes</td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
+                    </tr>
+                    
                 </tbody>
             </table>
             
