--- a/app/views/v6/l3/signin.html
+++ b/app/views/v6/l3/signin.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-    <form action="signin-code" method="post">
+    <form action="signin-branch" method="post">
         {{ govukFieldset({
             legend: {
                 html: 'Sign in through DWP Authenticate',
