Add L4 password reset journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -122,6 +122,10 @@
                                         text: "View L2 password reset journey"
                                     },
                                     {
+                                        value: "l4-reset",
+                                        text: "View L4 password reset journey"
+                                    },
+                                    {
                                         value: "l2-dashboard",
                                         text: "View as a L2 service admin"
                                     },
@@ -309,7 +313,7 @@
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Initially tested well, full user need not yet understoods</td>
-                        
+
                     </tr>
 
                     <tr class="govuk-table__row">
@@ -332,10 +336,10 @@
                         <td class="govuk-table__cell">Yes</td>
                         <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
-                    
+
                 </tbody>
             </table>
-            
+
 
             <details class="govuk-details govuk-!-margin-top-9">
                 <summary class="govuk-details__summary">
