Content amends to add service start page

--- a/app/views/v6/add-service/start.html
+++ b/app/views/v6/add-service/start.html
@@ -24,10 +24,14 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Add your service to DWP Authenticate</h1>
-            <p>Authenticate is the department's strategic solution for third party authentication.</p>
+            <p>Use DWP Authenticate to:</p>
 
-            <p>It allow users who work for organisations outside of DWP to access DWP systems
-                and supports multi-factor authentication using a mobile device (SMS or authenticator app).</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>invite people to use your service</li>
+                <li>manage their access to your service</li>
+            </ul>
+
+            <p>Once invited, they must use multi-factor authentication to register and sign in to your service. They can do this on a mobile device with SMS or an authenticator app. </p>
 
             {{ govukButton({
                 text: "Add your service",
@@ -40,10 +44,11 @@
             <p>You will need:</p>
 
             <ul class="govuk-list govuk-list--bullet">
-                <li>Contact details for your service</li>
-                <li>Support details for your service</li>
-                <li>Technical details (staging, environment and productions urls)</li>
-                <li>Details of the initial administrators for your service</li>
+                <li>a person we can talk to if we need information about your service</li>
+                <li>support that is available to people who use your service, including contact details and what days and times it is available</li>
+                <li>your service’s staging, environment and productions URLs</li>
+                <li>who the admins will be for your service - these will be people who invite people to use your service through DWP Authenticate and manage their access</li>
+
             </ul>
         </div>
     </div>
