Amends to confidence levels table

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -320,14 +320,14 @@
                         <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">Add a new user</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">New designs researched, initial design iterated, tested with 8 users</td>
+                        <td class="govuk-table__cell">Users have been able to complete task but multiple ways to do this and not all journeys explored</td>
                     </tr>
 
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell"><a href="/v6/l2/users/add/start">User details</a></td>
                         <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--medium">medium</span></td>
                         <td class="govuk-table__cell">Yes</td>
-                        <td class="govuk-table__cell">Users have been able to complete task but multiple ways to do this and not all journeys explored</td>
+                        <td class="govuk-table__cell">Journey not explored and business requirements needed</td>
                     </tr>
 
                      <tr class="govuk-table__row">
