--- a/app/views/v6/l4/users/register/password.html
+++ b/app/views/v6/l4/users/register/password.html
@@ -25,7 +25,7 @@
         <div class="govuk-grid-column-two-thirds">
             {% include 'includes/password-error-summary.njk' %}
 
-            <form id="tpas_password_form" method="post" class="form" action="mobile">
+            <form id="tpas_password_form" method="post" class="form" action="register-branch">
                 <fieldset class="govuk-fieldset" role="group" aria-describedby="passport-issued-hint passport-issued-error">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                         <h1 class="govuk-fieldset__heading">Create a new password</h1>
@@ -63,9 +63,11 @@
                         <input class="govuk-input govuk-input--width-20" id="txt_tpas_confirm_password" name="txt_tpas_confirm_password" type="password">
                     </div>
 
-                    <button class="govuk-button" data-module="govuk-button" id="continue">
+                    <button class="govuk-button" data-module="govuk-button" id="continue" type="submit">
                         Create password
                     </button>
+
+                    <input type="hidden" id="prototype-service" name="prototype-service" value="{{ data['prototype-service'] }}">
                 </fieldset>
             </form>
         </div>
