--- a/app/views/v6/add-service/group-name.html
+++ b/app/views/v6/add-service/group-name.html
@@ -31,16 +31,16 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <span class="govuk-caption-l">Add your service</span>
-                        Add an additional data group
+                        What additional data about your users do you want to capture?
                     </legend>
 
                     <p>
-                        For example, job rules or teams
+                        For example, job role or team
                     </p>
 
                     {{ govukInput({
                         label: {
-                            text: "Additional data group name"
+                            text: "Additional data"
                         },
                         id: "data-group-name",
                         name: "data-group-name",
