--- a/app/views/v6/add-service/information.html
+++ b/app/views/v6/add-service/information.html
@@ -31,7 +31,7 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <span class="govuk-caption-l">Add your service</span>
-                        Information used in the service
+                        What information does your service use?
                     </legend>
 
                     {{ govukCheckboxes({
