--- a/app/views/v6/add-service/items.html
+++ b/app/views/v6/add-service/items.html
@@ -31,7 +31,7 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <span class="govuk-caption-l">Add your service</span>
-                        Add an additional data group
+                        Add items to {{ data['data-group-name'] }}   
                     </legend>
 
                     <div id="custom-items">
