--- a/app/views/v6/add-service/technical.html
+++ b/app/views/v6/add-service/technical.html
@@ -31,13 +31,9 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <span class="govuk-caption-l">Add your service</span>
-                        Technical details
+                        Your service’s URLs
                     </legend>
 
-                    {{ govukDetails({
-                        summaryText: "Help with technical details",
-                        text: "Support details for your service are required to add your service to Authenticate."
-                    }) }}
 
                     {{ govukInput({
                         label: {
@@ -81,7 +77,7 @@
                         text: "Continue"
                     }) }}
 
-                    <p><a href="users">I'll add these later</a></p>
+                    <p><a href="users">I will add these later</a></p>
                 </fieldset>
             </form>
         </div>
