--- a/app/views/v6/add-service/details.html
+++ b/app/views/v6/add-service/details.html
@@ -66,7 +66,7 @@
                         id: "dwp-business-area",
                         name: "dwp-business-area",
                         label: {
-                            text: "DWP Business Area"
+                            text: "DWP business area"
                         },
                         items: [
                             {
@@ -109,8 +109,8 @@
                                 text: "Within the next month"
                             },
                             {
-                                value: "Within the next three months",
-                                text: "Within the next three months"
+                                value: "Within the next 3 months",
+                                text: "Within the next 3 months"
                             }
                         ]
                         }) }}
