Content amend to L3 register email

--- a/app/views/v6/l3/users/register/email.html
+++ b/app/views/v6/l3/users/register/email.html
@@ -30,7 +30,7 @@
                     <span style="font-family: Helvetica, Arial, sans-serif; margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
                         To: {{ data['prototype-firstname'] }} {{ data['prototype-lastname'] }}<br>
                         From: DWP Authenticate<br>
-                        Subject: Register as a {{ data['prototype-service'] }} admin
+                        Subject: Register as {{ data['prototype-organisation'] }}'s admin for {{ data['prototype-service'] }}
                     </span>
                 </td>
             </tr>
