Content amend to admins page

--- a/app/views/v6/add-service/admins.html
+++ b/app/views/v6/add-service/admins.html
@@ -31,10 +31,12 @@
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <span class="govuk-caption-l">Add your service</span>
-                        Who will invite users to your service and manage their access?
+                        Admins for your service
                     </legend>
 
-                    <h2 class="govuk-heading-m">Main administrator</h2>
+                    <p>These are the people who will use DWP Authenticate to invite users to your service and manage who has access.</p>
+
+                    <h2 class="govuk-heading-m">Main admin</h2>
 
                     {{ govukInput({
                         label: {
@@ -79,7 +81,7 @@
                         class="govuk-button govuk-button--secondary"
                         id="onboarding-add-another-admin"
                     >
-                        Add another administrator
+                        Add another admin
                     </button>
 
                     <div class="govuk-!-margin-top-6">
