--- a/app/views/v5/l3/users/view/all.html
+++ b/app/views/v5/l3/users/view/all.html
@@ -46,61 +46,61 @@
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
-                <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
+                <td class="govuk-table__cell">chris.fairclough@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
-                <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
+                <td class="govuk-table__cell">chris.whyte@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-                <td class="govuk-table__cell">david.batty@capita.co.uk</td>
+                <td class="govuk-table__cell">david.batty@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
-                <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
+                <td class="govuk-table__cell">gary.mcallister@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-                <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
+                <td class="govuk-table__cell">gary.speed@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
-                <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
+                <td class="govuk-table__cell">gordon.strachan@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
-                <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
+                <td class="govuk-table__cell">john.lukic@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
+                <td class="govuk-table__cell">jon.newsome@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
-                <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
+                <td class="govuk-table__cell">lee.chapman@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
-                <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
+                <td class="govuk-table__cell">mel.sterland@{{data['data-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
